# boilerplate-micropython

./: CHANGELOG.md  Makefile  README.md  check.sh  package.json  pyproject.toml  tox.ini
.github/workflows/: build.yml  qa.yml  test.yml
src/boilerplate/: __init__.py
tests/: conftest.py  test_setup.py
tools/: mkpackagejson.py
